1.TERM LINE UPDATED IMPLEMENTS COMPERATOR AND COMPERABLE 2.LITTLE FIXES IN MERGE 3.HEAP CRASHES!@#@!#@!##%^$&^*%^$#@@$%^&*(^*&^$%#$%^&